force-app/main/default/objects/Invoices__c/fields/Bill_To_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contacts</label>
    <referenceTo>Contacts__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>