force-app/main/default/objects/Invoices__c/fields/Billing_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Client_Name__c</fullName>
    <label>Billing Client Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>