force-app/main/default/objects/Invoices__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <label>Billing Contact</label>
    <type>Phone</type>
</CustomField>