force-app/main/default/objects/Invoices__c/fields/Billing_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>