force-app/main/default/objects/Invoices__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <label>Orders</label>
    <referenceTo>Orders__c</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>