force-app/main/default/objects/Invoices__c/fields/Shipping_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Client_Name__c</fullName>
    <label>Shipping Client Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>