force-app/main/default/objects/Invoices__c/fields/Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact__c</fullName>
    <label>Shipping Contact</label>
    <type>Phone</type>
</CustomField>